@startuml

title __AUTOROUTE's Class Diagram__\n

  namespace main {
    namespace Autoroute {
      class main.Autoroute.Autoroute {
          - id : int
          - perimeter : double
          - rayon : int
          - speed : double
          - vehicles : ArrayList<Vehicle>
          - vehiclesOut : ArrayList<Vehicle>
          + Autoroute()
          + addVehicle()
          + addVehiclesOut()
          + getAccess()
          + getId()
          + getPerimeter()
          + getRayon()
          + getSpeed()
          + getVehicles()
          + getVehiclesOut()
          + removeVehicle()
          + removeVehicleOut()
          + setAccess()
          + setId()
          + setPerimeter()
          + setRayon()
          + setSpeed()
          + setVehicles()
      }
    }
  }
  

  namespace main {
    namespace Autoroute {
      class main.Autoroute.AutorouteController {
          ~ autoroutes : ArrayList<Autoroute>
          + AutorouteController()
          {static} + getGatePosition()
          + insertVehicle()
          + next()
          - changeVehicle()
          - checkAccident()
          - checkIfVehiclesAreInSamePosition()
          - getBigger()
      }
    }
  }
  

  namespace main {
    namespace Autoroute {
      class main.Autoroute.AutorouteFactory {
          - count : int
          - defaultRayon : int
          + AutorouteFactory()
          + generate()
          + getAcces()
          + getCount()
          + getDefaultRayon()
      }
    }
  }
  

  main.Autoroute.Autoroute o-- main.Acces.Acces : access
  main.Autoroute.AutorouteController o-- main.Vehicule.VehicleController : vehicleController
  main.Autoroute.AutorouteFactory .up.|> main.Interface.Factory
  main.Autoroute.AutorouteFactory o-- main.Acces.Acces : acces


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
